--- a/css/calendar.css
+++ b/css/calendar.css
@@ -1,9 +1,7 @@
 li {
   list-style: none;
 }
-a {
-  text-decoration: none;
-}
+
 table {
   border-collapse: collapse;
 }
@@ -83,10 +81,32 @@ body {
 
 .calendar-header_list {
   flex: 1;
-  margin: 0px 2%;
+  padding: 0px 2%;
   width: 40%;
   text-align: center;
   justify-content: center;
+}
+
+.calendar-header_list .list-content_btn {
+  border-radius: 5px;
+  width: 100%;
+  border: none;
+  padding: 5px 5px;
+  background-color: var(--color-main-point2);
+  box-shadow: 0 0.5px 0.5px rgba(0, 0, 0, 0.05),
+    0 0.5px 0.5px rgba(0, 0, 0, 0.05);
+  transition: all 0.3s cubic-bezier(0.25, 0.8, 0.25, 1);
+}
+
+.calendar-header_list .list-content_btn .list-content_title {
+  display: flex;
+  font-family: 'NanumSquare';
+  font-size: 0.9rem;
+  font-weight: 400;
+  text-align: center;
+  justify-content: center;
+  letter-spacing: 5px;
+  color: var(--color-background);
 }
 
 .calendar-header_list .list-content {
