--- a/css/theme/common.css
+++ b/css/theme/common.css
@@ -8,6 +8,10 @@ body {
   color: var(--color-main-text);
 }
 
+li {
+  list-style: none;
+  color: var(--color-main-text);
+}
 /* header */
 .hd {
   grid-area: hd;
@@ -31,10 +35,12 @@ body {
   height: 100%;
 }
 
-.hd__menu__list1__item a {
+.hd__menu__list1__item .aTag-title {
   display: contents;
   width: 100%;
   height: 100%;
+  text-decoration: none;
+  color: inherit;
 }
 
 .hd__menu__list1__item {
@@ -45,7 +51,7 @@ body {
   line-height: 2em;
 }
 
-.hd__menu__list1 .hd__menu__list1__item{
+.hd__menu__list1 .hd__menu__list1__item {
   font-size: 1.1rem;
 }
 
@@ -113,8 +119,10 @@ body {
   color: var(--color-main-point2);
 }
 
-#logo h3 {
+#logo .logo-title {
   margin: 0 10px;
+  font-size: 1.17em;
+  font-weight: bold;
 }
 
 #join {
@@ -147,8 +155,10 @@ body {
 }
 
 @media screen and (width < 680px) {
-  #logo h3 {
+  #logo .logo-title {
     display: none;
+    font-size: 1.17em;
+    font-weight: bold;
   }
 
   #logo {
@@ -176,8 +186,10 @@ body {
     text-align: center;
   }
 
-  #logo h3 {
+  #logo .logo-title {
     display: inline-block;
+    font-size: 1.17em;
+    font-weight: bold;
   }
 
   #join {
@@ -237,15 +249,15 @@ body {
   line-height: 30px;
 }
 
-.ft__mid-area .ft__buttons:hover a {
+.ft__mid-area .ft__buttons:hover .aTag-title {
   background-color: rgba(245, 245, 245, 0.678);
   color: var(--color-main-text);
 }
 
-.f-item1 a:hover::after {
+.f-item1 .aTag-title:hover::after {
   content: '\f578';
   font-family: FontAwesome;
-  color: rgba(245, 245, 245, 0.678);
+  color: #f5f5f5;
   margin-left: 10px;
 }
 
@@ -253,11 +265,15 @@ body {
   margin: 20px auto 10px auto;
 }
 
-.ft__buttons a {
+.ft__buttons .aTag-title {
   display: inline-block;
   width: 100%;
   height: 100%;
   border-radius: 40px;
+}
+
+.ft__buttons .aTag-title:hover {
+  color: #f5f5f5;
 }
 
 .ft__mid-area {
