--- a/css/theme/layout.css
+++ b/css/theme/layout.css
@@ -1,5 +1,5 @@
 @charset "utf-8";
-@import 'common.css';
+@import '/css/theme/common.css';
 /* * {
   outline: 1px solid green;
   margin: 0;
@@ -48,7 +48,7 @@ body {
 }
 
 /* 메인 */
-.container {
+.main-container {
   grid-area: mn;
   width: 100%;
   padding: 20px 0;
