--- a/css/calendar.css
+++ b/css/calendar.css
@@ -89,13 +89,14 @@ body {
 
 .calendar-header_list .list-content_btn {
   border-radius: 5px;
-  width: 100%;
+  width: 70%;
+  height: 30px;
   border: none;
   padding: 5px 5px;
   background-color: var(--color-main-point2);
-  box-shadow: 0 0.5px 0.5px rgba(0, 0, 0, 0.05),
-    0 0.5px 0.5px rgba(0, 0, 0, 0.05);
+  box-shadow: 1px 1px 1px rgba(0, 0, 0, 0.12), 1px 1px 1px rgba(0, 0, 0, 0.12);
   transition: all 0.3s cubic-bezier(0.25, 0.8, 0.25, 1);
+  box-sizing: border-box;
 }
 
 .calendar-header_list .list-content_btn .list-content_title {
@@ -329,6 +330,21 @@ body {
   height: 100%;
   overflow: auto;
   background-color: rgba(0, 0, 0, 0.4);
+  font-family: 'NanumSquare';
+}
+
+.modal-header {
+  padding-bottom: 20px;
+  font-size: 24px;
+  font-weight: bold;
+  margin-bottom: 30px;
+}
+
+.modal-title_tw {
+  display: inline-block;
+  font-size: 16px;
+  padding: 16px 16px;
+  font-weight: 500;
 }
 
 .modal-content {
@@ -337,6 +353,10 @@ body {
   padding: 20px;
   border: 1px solid #888;
   width: 80%;
+}
+
+.modal-body_top {
+  background-color: #fefefe;
 }
 
 .close {
