--- a/css/theme/common.css
+++ b/css/theme/common.css
@@ -6,11 +6,48 @@
 body {
   font-family: 'NanumSquare';
   color: var(--color-main-text);
+  background-color: var(--color-background);
 }
 
 li {
   list-style: none;
   color: var(--color-main-text);
+}
+
+.logo-title {
+  /* display: inline-block; */
+  margin: 0px 10px;
+  font-size: 1.17em;
+  margin-block-start: 1em;
+  margin-block-end: 1em;
+  margin-inline-start: 0px;
+  margin-inline-end: 0px;
+  font-weight: bold;
+  line-height: 35px;
+}
+
+.user-profile_p {
+  display: block;
+  height: 18px;
+  margin-bottom: 0px;
+  margin-block-start: 0.825em;
+  margin-block-end: 1em;
+  margin-inline-start: 0px;
+  margin-inline-end: 0px;
+  box-sizing: border-box;
+}
+
+.user-profile_h2 {
+  display: block;
+  margin: 0;
+  padding: 0;
+  font-size: 1.5em;
+  margin-block-start: 1.2709375em;
+  margin-block-end: 1.0375em;
+  margin-inline-start: 0px;
+  margin-inline-end: 0px;
+  font-weight: bold;
+  line-height: 0;
 }
 /* header */
 .hd {
@@ -121,8 +158,6 @@ li {
 
 #logo .logo-title {
   margin: 0 10px;
-  font-size: 1.17em;
-  font-weight: bold;
 }
 
 #join {
@@ -157,8 +192,7 @@ li {
 @media screen and (width < 680px) {
   #logo .logo-title {
     display: none;
-    font-size: 1.17em;
-    font-weight: bold;
+    margin: 0 10px;
   }
 
   #logo {
@@ -188,8 +222,6 @@ li {
 
   #logo .logo-title {
     display: inline-block;
-    font-size: 1.17em;
-    font-weight: bold;
   }
 
   #join {
@@ -225,7 +257,7 @@ li {
 }
 
 /* footer */
-.wrap .ft {
+.wrap .ft__container {
   grid-area: ft;
   width: auto;
   height: auto;
@@ -238,7 +270,7 @@ li {
   text-align: center;
 }
 
-.wrap .ft .ft__buttons {
+.wrap .ft__container .ft__buttons {
   max-width: 100%;
 }
 
@@ -249,30 +281,30 @@ li {
   line-height: 30px;
 }
 
-.ft__mid-area .ft__buttons:hover .aTag-title {
+.ft__mid-area .ft__buttons:hover .faTag-title {
   background-color: rgba(245, 245, 245, 0.678);
   color: var(--color-main-text);
 }
 
-.f-item1 .aTag-title:hover::after {
+.f-item1 .faTag-title:hover::after {
   content: '\f578';
   font-family: FontAwesome;
   color: #f5f5f5;
   margin-left: 10px;
 }
 
-.ft__buttons.f-item1 {
+.ft__buttons .f-item1 {
   margin: 20px auto 10px auto;
 }
 
-.ft__buttons .aTag-title {
+.ft__buttons .faTag-title {
   display: inline-block;
   width: 100%;
   height: 100%;
   border-radius: 40px;
 }
 
-.ft__buttons .aTag-title:hover {
+.ft__buttons .faTag-title:hover {
   color: #f5f5f5;
 }
 
@@ -305,7 +337,7 @@ li {
 
 /* 반응형 footer */
 @media screen and (width < 880px) {
-  .ft .ft__mid-area {
+  .ft__container .ft__mid-area {
     flex-direction: column;
   }
 }
